// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageCard renders standard card 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  background-color: rgba(255,255,255,1);
  border-radius: 4px;
  border: 1px solid #bfbfbf;
  padding: 16px;
  border-radius: 4px;
  background-color: rgba(255,255,255,1);
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.06),0 0 4px 0 rgba(0,0,0,0.12);
  padding: 16px;
  border: none;
  padding: 0;
}

.c2 {
  width: 100%;
  max-width: 100%;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

<div
  className="sc-AxjAm sc-AxirZ c0 container-block"
>
  <div
    className="c1"
  >
    <img
      alt="image"
      className="c2"
      src="http://localhost/img.png"
      title="image"
    />
    <div
      className="c3 image-card__overlay"
    />
  </div>
</div>
`;

exports[`ImageCard renders type = half 1`] = `
.c5 {
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  text-transform: none;
  color: rgba(38,38,38,1);
}

.c2 {
  width: 100%;
  max-width: 100%;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c3 {
  position: relative;
  color: rgba(255,255,255,1);
  background-color: none;
  border-radius: 4px;
  padding: 4px 8px;
  margin-left: 8px;
  margin-bottom: 8px;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c1 {
  position: relative;
  overflow: hidden;
  background-color: rgba(255,255,255,1);
  border-radius: 4px;
  border: 1px solid #bfbfbf;
  padding: 16px;
  border-radius: 4px;
  background-color: rgba(255,255,255,1);
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.06),0 0 4px 0 rgba(0,0,0,0.12);
  padding: 16px;
  border: none;
  padding: 0;
  width: 50%;
}

.c4 {
  display: block;
  width: 100%;
  font-size: 16px;
  font-weight: 600;
}

.c4 > .image-card__title--half > span {
  font-size: 14px;
  color: #026cdf;
}

.c6 {
  font-size: 14px;
  font-weight: 400;
}

.c6 > .image-card__subtitle--half > span {
  color: #1f262d;
  -webkit-letter-spacing: "normal";
  -moz-letter-spacing: "normal";
  -ms-letter-spacing: "normal";
  letter-spacing: "normal";
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="sc-fznxsB c0"
>
  <div
    className="sc-AxjAm sc-AxirZ sc-fzokOt c1 container-block"
  >
    <img
      alt=""
      className="c2"
      src="http://localhost/img.png"
      title=""
    />
  </div>
  <div
    className="c3 image-card__caption"
  >
    <span
      className="c4"
    >
      <div
        className="c5 text text--dark text--primary image-card__title--half"
        disabled={false}
        size="hecto"
      >
        <span
          className="c4"
        >
          Title
        </span>
      </div>
    </span>
    <span
      className="c6"
    >
      <div
        className="c5 text text--dark text--primary image-card__subtitle--half"
        disabled={false}
        size="hecto"
      >
        <span
          className="c6"
        >
          Sub Title
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`ImageCard renders with additional content when \`cardTitle\` and \`cardSubtitle\` prop values are not provided (old API support) 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  background-color: rgba(255,255,255,1);
  border-radius: 4px;
  border: 1px solid #bfbfbf;
  padding: 16px;
  border-radius: 4px;
  background-color: rgba(255,255,255,1);
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.06),0 0 4px 0 rgba(0,0,0,0.12);
  padding: 16px;
  border: none;
  padding: 0;
}

.c2 {
  width: 100%;
  max-width: 100%;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c4 {
  position: relative;
  color: rgba(255,255,255,1);
  background-color: rgba(31,38,45,0.8);
  border-radius: 4px;
  padding: 4px 8px;
  margin-left: 8px;
  margin-bottom: 8px;
  font-style: inherit;
  font-stretch: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
}

.c5 {
  display: block;
  width: 100%;
  font-size: 16px;
  font-weight: 600;
}

.c5 > .image-card__title--half > span {
  font-size: 14px;
  color: #026cdf;
}

.c6 {
  font-size: 14px;
  font-weight: 400;
}

.c6 > .image-card__subtitle--half > span {
  color: #1f262d;
  -webkit-letter-spacing: "normal";
  -moz-letter-spacing: "normal";
  -ms-letter-spacing: "normal";
  letter-spacing: "normal";
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

<div
  className="sc-AxjAm sc-AxirZ c0 container-block"
>
  <div
    className="c1"
  >
    <img
      alt=""
      className="c2"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="c3 image-card__overlay"
    >
      <div
        className="c4 image-card__caption"
      >
        <span
          className="c5"
        >
          Title
        </span>
        <span
          className="c6"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
  <div>
    Extra content
  </div>
</div>
`;

exports[`ImageCard renders with custom image 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  background-color: rgba(255,255,255,1);
  border-radius: 4px;
  border: 1px solid #bfbfbf;
  padding: 16px;
  border-radius: 4px;
  background-color: rgba(255,255,255,1);
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.06),0 0 4px 0 rgba(0,0,0,0.12);
  padding: 16px;
  border: none;
  padding: 0;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c3 {
  position: relative;
  color: rgba(255,255,255,1);
  background-color: rgba(31,38,45,0.8);
  border-radius: 4px;
  padding: 4px 8px;
  margin-left: 8px;
  margin-bottom: 8px;
  font-style: inherit;
  font-stretch: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
}

.c4 {
  display: block;
  width: 100%;
  font-size: 16px;
  font-weight: 600;
}

.c4 > .image-card__title--half > span {
  font-size: 14px;
  color: #026cdf;
}

.c5 {
  font-size: 14px;
  font-weight: 400;
}

.c5 > .image-card__subtitle--half > span {
  color: #1f262d;
  -webkit-letter-spacing: "normal";
  -moz-letter-spacing: "normal";
  -ms-letter-spacing: "normal";
  letter-spacing: "normal";
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

<div
  className="sc-AxjAm sc-AxirZ c0 container-block"
>
  <div
    className="c1"
  >
    <svg />
    <div
      className="c2 image-card__overlay"
    >
      <div
        className="c3 image-card__caption"
      >
        <span
          className="c4"
        >
          Title
        </span>
        <span
          className="c5"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
  <div>
    Extra content
  </div>
</div>
`;

exports[`ImageCard renders with custom props 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  background-color: rgba(255,255,255,1);
  border-radius: 4px;
  border: 1px solid #bfbfbf;
  padding: 16px;
  border-radius: 4px;
  background-color: rgba(255,255,255,1);
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.06),0 0 4px 0 rgba(0,0,0,0.12);
  padding: 16px;
  border: none;
  padding: 0;
}

.c2 {
  width: 100%;
  max-width: 100%;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c4 {
  position: relative;
  color: rgba(255,255,255,1);
  background-color: rgba(31,38,45,0.8);
  border-radius: 4px;
  padding: 4px 8px;
  margin-left: 8px;
  margin-bottom: 8px;
  font-style: inherit;
  font-stretch: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
}

.c5 {
  display: block;
  width: 100%;
  font-size: 16px;
  font-weight: 600;
}

.c5 > .image-card__title--half > span {
  font-size: 14px;
  color: #026cdf;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

<div
  className="sc-AxjAm sc-AxirZ c0 container-block"
>
  <div
    className="c1"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <img
      alt=""
      className="c2"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="c3 image-card__overlay"
      style={
        Object {
          "display": "none",
        }
      }
    >
      <div
        className="c4 image-card__caption"
        style={
          Object {
            "display": "none",
          }
        }
      >
        <span
          className="c5"
        >
          Title
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageCard renders with title & subtitle 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  background-color: rgba(255,255,255,1);
  border-radius: 4px;
  border: 1px solid #bfbfbf;
  padding: 16px;
  border-radius: 4px;
  background-color: rgba(255,255,255,1);
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.06),0 0 4px 0 rgba(0,0,0,0.12);
  padding: 16px;
  border: none;
  padding: 0;
}

.c2 {
  width: 100%;
  max-width: 100%;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c4 {
  position: relative;
  color: rgba(255,255,255,1);
  background-color: rgba(31,38,45,0.8);
  border-radius: 4px;
  padding: 4px 8px;
  margin-left: 8px;
  margin-bottom: 8px;
  font-style: inherit;
  font-stretch: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
}

.c5 {
  display: block;
  width: 100%;
  font-size: 16px;
  font-weight: 600;
}

.c5 > .image-card__title--half > span {
  font-size: 14px;
  color: #026cdf;
}

.c6 {
  font-size: 14px;
  font-weight: 400;
}

.c6 > .image-card__subtitle--half > span {
  color: #1f262d;
  -webkit-letter-spacing: "normal";
  -moz-letter-spacing: "normal";
  -ms-letter-spacing: "normal";
  letter-spacing: "normal";
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

<div
  className="sc-AxjAm sc-AxirZ c0 container-block"
>
  <div
    className="c1"
  >
    <img
      alt=""
      className="c2"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="c3 image-card__overlay"
    >
      <div
        className="c4 image-card__caption"
      >
        <span
          className="c5"
        >
          Title
        </span>
        <span
          className="c6"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageCard renders with title & subtitle, extra content 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
  background-color: rgba(255,255,255,1);
  border-radius: 4px;
  border: 1px solid #bfbfbf;
  padding: 16px;
  border-radius: 4px;
  background-color: rgba(255,255,255,1);
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.06),0 0 4px 0 rgba(0,0,0,0.12);
  padding: 16px;
  border: none;
  padding: 0;
}

.c2 {
  width: 100%;
  max-width: 100%;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c4 {
  position: relative;
  color: rgba(255,255,255,1);
  background-color: rgba(31,38,45,0.8);
  border-radius: 4px;
  padding: 4px 8px;
  margin-left: 8px;
  margin-bottom: 8px;
  font-style: inherit;
  font-stretch: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
}

.c5 {
  display: block;
  width: 100%;
  font-size: 16px;
  font-weight: 600;
}

.c5 > .image-card__title--half > span {
  font-size: 14px;
  color: #026cdf;
}

.c6 {
  font-size: 14px;
  font-weight: 400;
}

.c6 > .image-card__subtitle--half > span {
  color: #1f262d;
  -webkit-letter-spacing: "normal";
  -moz-letter-spacing: "normal";
  -ms-letter-spacing: "normal";
  letter-spacing: "normal";
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

<div
  className="sc-AxjAm sc-AxirZ c0 container-block"
>
  <div
    className="c1"
  >
    <img
      alt=""
      className="c2"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="c3 image-card__overlay"
    >
      <div
        className="c4 image-card__caption"
      >
        <span
          className="c5"
        >
          Title
        </span>
        <span
          className="c6"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
  <div>
    Extra content
  </div>
</div>
`;
